# gratch

./: .clang-format  .gitignore  COPYING  README.md  fun.larryw3i.gratch.json  fun.larrywei.gratch.json  gratch.py  gratch.sh  meson.build  org.example.App.json  setup.py
data/: fun.larryw3i.gratch.appdata.xml.in  fun.larryw3i.gratch.desktop.in  fun.larryw3i.gratch.gschema.xml  fun.larrywei.gratch.appdata.xml.in  fun.larrywei.gratch.desktop.in  fun.larrywei.gratch.gschema.xml  meson.build  org.example.App.desktop.in  org.example.App.gschema.xml
data/icons/: meson.build
gratch/: __init__.py  settings.py
gratch/appwins/: __init__.py  gratchwindow.glade  gratchwindow.py
gratch/locale/: __init__.py  gratch.pot
gratch/locale/en_US/LC_MESSAGES/: gratch.po
gratch/locale/zh_CN/LC_MESSAGES/: gratch.po
gratch/ready/: __init__.py
gratch/widgets/: areabase.py  combinationarea.py  mainwindow.py  presentationarea.py  widgetarea.py
po/: LINGUAS  POTFILES  en_US.po  gratch.pot  meson.build  zh_CN.po  zh_HK.po
src/: gratch-application.c  gratch-application.h  gratch-window.c  gratch-window.h  gratch-window.ui  gratch.gresource.xml  main.c  meson.build
